# CG-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: semisphere.nurbs  sphere.nurbs
configs/: final_project.json  large_mesh_basic.json  simple.json
include/: accel.h  bezier.h  bsdf.h  camera.h  config.h  config_io.h  core.h  geometry.h  image.h  integrator.h  interaction.h  light.h  load_obj.h  nurbs.h  ray.h  scene.h  utils.h
report/: report.tex
src/: accel.cpp  bezier.cpp  bsdf.cpp  geometry.cpp  integrator.cpp  light.cpp  load_obj.cpp  nurbs.cpp  scene.cpp
